“转换煅烧器”和“湮灭装置”